Bug 154695 - DOCX ToC: Tab stop is inserted before entry text, when there's no numbering
Summary: DOCX ToC: Tab stop is inserted before entry text, when there's no numbering
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2023-04-07 07:36 UTC by Mike Kaganski
Modified: 2023-04-08 21:19 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
ToC, no numbering (15.77 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-04-07 07:36 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-04-07 07:36:32 UTC
Created attachment 186528 [details]
ToC, no numbering

After commit 7eedd76d93ef04d11ae2e1bfb1e7d264aab88f40 (tdf#154360: use TOC(N) styles in DOCX as the source of ToC tab stop position, 2023-03-24), the attached document's ToC adds indentation to the entries after update.
Comment 1 Commit Notification 2023-04-07 22:47:44 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b6a5f16a9bf3227867bf46b88d012440138b6f24

tdf#154695: use Chapter Numbering Rules to confirm that ToC needs tabs

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-04-08 21:19:37 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/8914765ec9330d250e220b1ef51f7c62b82b8e2f

tdf#154695: use Chapter Numbering Rules to confirm that ToC needs tabs

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.