tdf#154695: use Chapter Numbering Rules to confirm that ToC needs tabs

Indeed, this still can't handle it per-element, like Word does: the latter
would omit both the number and the tab for headings without numbering. But
at least the most common case should be handled better now.

Change-Id: I0be5d61a5d2cbbf778ee88a11129a6e7655593ec
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150133
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit b6a5f16a9bf3227867bf46b88d012440138b6f24)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150142
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>